Thu Mar  5 12:32:06 1998  Marc Ewing  <marc@redhat.com>

	* gtk/gtkclist.c (select_row): emit UNselect on rows
	  that are not selected.

Thu Mar  5 01:22:06 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkwidget.c (gtk_widget_unparent): Unset allocation
	  on unparent, to force reallocation if we get adding back
	  to a new parent which is already size-allocated.

	* gtk/gtktreeitem.c: Keep track of separate +/- pixmaps
	  for each colormap, removed the idle hack.

	* gdk/gdk.c: Don't warn when unable to open XIM method,
	  since X11R5 apparently has no default method.

	* gtk/gtkwidget.c (gtk_widget_set_style_internal): Don't
	  call size_request on initial emission - since the
	  widget size isn't set yet, it can't change.

	* gtk/Makefile.am: New rules 'test' and 'test-debug' to run
	  testgtk with the correct working directory.

	* gtk/gtkentry.c (gtk_move_forward_word): 
	  Check for position at end of line.

	* gtk/gtkinputdialog.h (struct _GtkInputDialogClass): 
	  removed 'gpointer data' arguments from default handler
	  structures.

Wed Mar  4 20:06:47 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gdk/gdk.c (gdk_event_translate): Drags can only be started with
	the left button.

Wed Mar  4 16:02:44 GMT 1998 Tony Gale  <gale@gimp.org>

	* docs/gtkfaq.sgml: widget hierarchy update from Tim Janik

Mon Mar  2 19:57:27 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gdk/gdkproperty.c (gdk_atom_name): Initialize gdk_error_code to
	zero before calling the X routine.

Tue Mar  3 01:22:25 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkspinbutton.c: applied patch from lars and steffan to proper
 	check for realized widgets.

Mon Mar  2 18:27:09 CST 1998 Shawn T. Amundson <amundson@gimp.org>

        * gtk/gtkstatusbar.h: fixed ifndef..define typo

Mon Mar  2 17:48:38 1998  Owen Taylor  <owt1@cornell.edu>

	Miscellaneous minor fixes to remove ANSI C incompatibilities

	* gdk/gdkregion.c gtk/gtkclist.c: fix // comments
